# intel-llvm-mirror

./: README.md
buildbot/: compile.py  configure.py
clang/lib/: CMakeLists.txt
clang/lib/CodeGen/: CGBuiltin.cpp  CodeGenFunction.cpp
clang/lib/Driver/: Action.cpp  Driver.cpp  ToolChain.cpp
clang/lib/FrontendTool/: CMakeLists.txt  ExecuteCompilerInvocation.cpp
clang/lib/InferASPChecker/: CMakeLists.txt  ConstraintGather.cpp  ConstraintGatherCast.cpp  InferActions.cpp  TypeBuilder.cpp  TypePrinter.cpp  Unifier.cpp  UnifyContext.cpp  UnifyType.cpp
clang/lib/Sema/: SPIRVBuiltins.td  SemaChecking.cpp  SemaDeclAttr.cpp  SemaExpr.cpp  SemaSYCL.cpp
clang/test/CodeGen/: builtins-nvptx.c
clang/test/CodeGenCXX/: visibility.cpp
clang/test/CodeGenSYCL/: image_accessor.cpp
clang/test/Driver/: amdgpu-openmp-toolchain.c  openmp-offload.c
clang/test/SYCLASPInfer/: acc-capture.cpp  asp_cast.cpp  call.cpp  cast.cpp  check-timer.cpp  init-expr.cpp  lambda.cpp  stmt.cpp  var-infer-conflict.cpp  var-infer.cpp  vector.cpp
clang/test/SemaOpenCL/: numbered-address-space.cl
clang/tools/: CMakeLists.txt
clang/unittests/: CMakeLists.txt
clang/unittests/InferASPChecker/: CMakeLists.txt  UnifyTest.cpp
devops/actions/llvm_test_suite/: action.yml
llvm-spirv/include/: LLVMSPIRVExtensions.inc
llvm-spirv/test/: bindless-images.ll
llvm/lib/Support/: Base64.cpp
sycl/: CMakeLists.txt
sycl/doc/: GetStartedGuide.md
sycl/source/: CMakeLists.txt  device.cpp  feature_test.hpp.in  queue.cpp
sycl/test/: CMakeLists.txt  async_copy_mask.cpp  lit.cfg.py  lit.site.cfg.py.in
(+255 files in other folders)
